--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mongodb": "^6.19.0"
+    "mongodb": "^6.19.0",
+    "cors": "^2.8.5"
   }
 }
